# ELC1048_FinalProject

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sensor.ino
ESP32_FreeRTOS/: ESP32_FreeRTOS.ino
LoRaMultipleCommunicationInterrupt/: LoRaMultipleCommunicationInterrupt.ino
dev/: timeout.ino
dev/ESP32_FreeRTOS/: ESP32_FreeRTOS.ino
dev/IC2_display_test/: IC2_display_test.ino
dev/LoRaMultipleCommunicationInterrupt/: LoRaMultipleCommunicationInterrupt.ino
dev/primeiros_testes_lora_rtos/: primeiros_testes_lora_rtos.ino
